Add style navbar

--- a/M1S03/S03EX04/style.css
+++ b/M1S03/S03EX04/style.css
@@ -1,1 +1,41 @@
-s03ex04
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  padding: 0 auto;
+  margin: 0 auto;
+  font-family: monospace;
+  background-color: wheat;
+  font-size: 8em;
+  font-weight: bold;
+  width: 100%;
+}
+.navbar {
+  height: 500px;
+  padding: 16px;
+  margin: 16px;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 12px;
+  gap: 0.6em;
+  list-style-type: none;
+}
+li {
+  background-color: #2a2d2f;
+  padding: 10px;
+}
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+  text-decoration-color: #ffffff;
+}
