--- a/M1S05/S5EX8/style.css
+++ b/M1S05/S5EX8/style.css
@@ -5,13 +5,11 @@
 }
 body {
     background-color: #000;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 #personagem {
   height: 100px;
   width: 100px;
   font-size: 4em;
   position: absolute;
-  right: 30px;
-  top: min(100vh - 100px, 50vh);
 }
